layout bug need to Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,6 @@
   }
 }
 
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-} */
-
 .Navbar {
   background-color: rgb(224, 223, 239);
   /* position: fixed; */
@@ -156,36 +145,7 @@ body {
   position: relative;
   bottom: 16rem;
 }
-/*
-     .flogo1{
-        
-        float: left;
-        margin-bottom: 40rem;
-        margin-left: 45%;
-        position: relative;
-        bottom: 0rem;
-        left: 0rem;
-        width: 16rem;
-        height: 16rem;
-        top:55.5rem;
-        
-     }
-     .fname{
-        float: left;
-        margin-left:0rem;
-        bottom: 0rem;
-        left: 0rem;
-        position:relative;
-        top:68rem;
-        font-size: 1.6rem;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-    p{
-        margin-left: 6%;
-        bottom:0rem;
-        margin-bottom: 4.0rem;
-        position: relative;
-    }*/
+
 @media (max-width: 99.8rem) {
   .Navbar {
     /* font-size: 55%; */
